fix: broken layout

--- a/src/shared/themes/global.styles.css
+++ b/src/shared/themes/global.styles.css
@@ -22,6 +22,14 @@ textarea {
 
 html {
   scroll-behavior: smooth;
+
+  @media (max-width: 1080px) {
+    font-size: 93.75%;
+  }
+
+  @media (max-width: 720px) {
+    font-size: 87.5%;
+  }
 }
 
 button {
